kubernetes/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: jenkins
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: jenkins
    spec:
      securityContext:
        fsGroup: 1000 
        runAsUser: 0
      containers:
        - env:
            - name: JENKINS_ARGS
              value: --httpKeepAliveTimeout=60000
            - name: JENKINS_OPTS
              value: --httpPort=8085
          image: jenkins/jenkins:lts
          name: jenkins
          ports:
            - containerPort: 8085
            - containerPort: 50000
          resources: {}
          volumeMounts:
            - mountPath: /var/jenkins_home
              name: jenkins-home
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /home/ajsampang/jenkins
          name: jenkins-home
status: {}
