kubernetes/ajtheamazing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ajtheamazing-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ajtheamazing
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ajtheamazing
    spec:
      containers:
        - image: ajsampang67/ajtheamazing:1.1
          name: ajtheamazing
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /home/ajsampang/ajtheamazing
              name: ajtheamazing-files
      restartPolicy: Always
      volumes:
        - name: ajtheamazing-files
          persistentVolumeClaim:
            claimName: ajtheamazing-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: ajtheamazing-service
  labels:
    app: ajtheamazing
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: ajtheamazing
