kubernetes/blog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deployment
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - env:
            - name: WORDPRESS_DB_HOST
              value: database
            - name: WORDPRESS_DB_PASSWORD
              value: ajMysql67
            - name: WORDPRESS_DB_USER
              value: wordpress
          image: wordpress:5.9.3-apache
          name: blog
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wp-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blog
  name: blog
spec:
  ports:
    - port: 80
  selector:
    app: blog
