kubernetes/blog-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: blog
  name: blog
spec:
  ports:
    - port: 80
  selector:
    io.kompose.service: blog
status:
  loadBalancer: {}
