kubernetes/database-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: database 
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: database 
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: database
  name: database
spec:
  selector:
    matchLabels:
      app: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: wordpress
            - name: MYSQL_PASSWORD
              value: ajMysql67
            - name: MYSQL_ROOT_PASSWORD
              value: ajMysql67
            - name: MYSQL_USER
              value: wordpress
          image: mysql:5.7
          name: database
          ports:
            - containerPort: 3306
              name: database
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-persistent-storage 
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
