kubernetes/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: jenkins
  name: jenkins
spec:
  ports:
    - name: "8085"
      port: 8085
      targetPort: 8085
    - name: "50000"
      port: 50000
      targetPort: 50000
  selector:
    io.kompose.service: jenkins
status:
  loadBalancer: {}
